--- a/index.html
+++ b/index.html
@@ -321,10 +321,17 @@ $(document).ready(function () {
 
 <p><link rel="stylesheet" href="styles.css" type="text/css"></p>
 <p><img src="images/davidalbertbrewer_headshot_1.jpg" style="width:25%; border:10px solid; margin-right: 20px" align="left"></p>
-<p>I like to analyze data to answer research questions and test hypotheses. Currently I investigate questions related to breast cancer through my work as a Research Biostatistician at <a href="https://www.mskcc.org/departments/epidemiology-biostatistics">Memorial Sloan Kettering Cancer Center</a> in the department of Epidemiology &amp; Biostatistics.</p>
-<p>I graduated from the <a href="http://www.sph.umn.edu/academics/divisions/biostatistics/">University of Minnesota</a> with a MS in biostatistics in 2010. In 2012 I began working toward my DrPH in biostatistics as a part-time student at <a href="https://www.mailman.columbia.edu/become-student/departments/biostatistics">Columbia University</a>, where I am investigating statistical methods for the study of etiologic heterogeneity in epidemiologic studies under the advisement of <a href="https://www.mailman.columbia.edu/people/our-faculty/sw2206">Dr. Shuang Wang</a> at Columbia University and <a href="https://www.mskcc.org/profile/colin-begg">Dr. Colin Begg</a> at Memorial Sloan Kettering Cancer Center. I expect to graduate by the end of 2018.</p>
-<p>I am a well-known R enthusiast, including serving on the board and being an active member of <a href="http://www.rladiesnyc.org/">R Ladies NYC</a>.</p>
-<p>My full CV is available <a href="files/Zabor_CV_2017_Q4.pdf">here</a>.</p>
+<p>My current skill set is at the intersection of business, statistics, computing, data analysis, and data modeling.</p>
+<p>I studied data science at the <a href="https://www.umt.edu/study/data-science">University of Montana</a> and graduated with an MS in <a href="http://www.business.umt.edu/programs/graduate/msba-program/">Business Analytics</a> as part of the inagural cohort in 2017.</p>
+<p>I began my career working with a innovative startup focused on real estate technology, <a href="https://www.realestatepipeline.com/">Real Estate Pipeline</a>.</p>
+<p>During graduate school I worked as an assistant to professors:<br />
+- Dr. Shawn Clouse, MIS<br />
+- Dr. Jason Triche, Data Analytics<br />
+- Dr. Justin Angle, Marketing</p>
+<p>I completed internships with local Montana companies: - <a href="https://thinkdatasmart.com/">DataSmart Solutions</a> as a BI developer<br />
+- CTG, Inc now <a href="https://www.compunet.biz/">CompuNet</a> as a junior data scientist<br />
+- <a href="https://www.paynewest.com/">PayneWest Insurance</a> as a data analyst</p>
+<p>My full resume is available <a href="files/David_Brewer_Resume.pdf">here</a>.</p>
 
 
 
