Updated image to S3 bucket

--- a/index.html
+++ b/index.html
@@ -320,7 +320,7 @@ $(document).ready(function () {
 
 
 <p><link rel="stylesheet" href="styles.css" type="text/css"></p>
-<p><img src="images/davidalbertbrewer_headshot_1.jpg" style="width:25%; border:10px solid; margin-right: 20px" align="left"></p>
+<p><img src="https://davidalbertbrewer.s3-us-west-2.amazonaws.com/davidalbertbrewer_headshot_1.jpg" style="width:25%; border:10px solid; margin-right: 20px" align="left"></p>
 <p>My current skill set is at the intersection of business, statistics, computing, data analysis, and data modeling.</p>
 <p>I studied data science at the <a href="https://www.umt.edu/study/data-science">University of Montana</a> and graduated with an MS in <a href="http://www.business.umt.edu/programs/graduate/msba-program/">Business Analytics</a> as part of the inagural cohort in 2017.</p>
 <p>I began my career working with a innovative startup focused on real estate technology, <a href="https://www.realestatepipeline.com/">Real Estate Pipeline</a>.</p>
