Updated content with formatting on index, projects and software pages.

--- a/index.html
+++ b/index.html
@@ -320,18 +320,51 @@ $(document).ready(function () {
 
 
 <p><link rel="stylesheet" href="styles.css" type="text/css"></p>
-<p><img src="https://davidalbertbrewer.s3-us-west-2.amazonaws.com/davidalbertbrewer_headshot_1.jpg" style="width:25%; border:10px solid; margin-right: 20px" align="left"></p>
-<p>My current skill set is at the intersection of business, statistics, computing, data analysis, and data modeling.</p>
-<p>I studied data science at the <a href="https://www.umt.edu/study/data-science">University of Montana</a> and graduated with an MS in <a href="http://www.business.umt.edu/programs/graduate/msba-program/">Business Analytics</a> as part of the inagural cohort in 2017.</p>
-<p>I began my career working with a innovative startup focused on real estate technology, <a href="https://www.realestatepipeline.com/">Real Estate Pipeline</a>.</p>
-<p>During graduate school I worked as an assistant to professors:<br />
-- Dr. Shawn Clouse, MIS<br />
-- Dr. Jason Triche, Data Analytics<br />
-- Dr. Justin Angle, Marketing</p>
-<p>I completed internships with local Montana companies: - <a href="https://thinkdatasmart.com/">DataSmart Solutions</a> as a BI developer<br />
-- CTG, Inc now <a href="https://www.compunet.biz/">CompuNet</a> as a junior data scientist<br />
-- <a href="https://www.paynewest.com/">PayneWest Insurance</a> as a data analyst</p>
-<p>My full resume is available <a href="files/David_Brewer_Resume.pdf">here</a>.</p>
+<p><img src="https://davidalbertbrewer.s3-us-west-2.amazonaws.com/davidalbertbrewer_headshot_1.jpg" style="width:50%; border:10px solid; margin-right: 20px; margin-left: 20px" align="right"></p>
+<p><br> <br> <em>Welcome,</em></p>
+<p><em>This is my personal website designed as a portfolio to showcase my technical skills, previous projects, and software products.</em></p>
+<p><em>My current skill set is at the intersection of business, statistics, computing, data analysis, and data modeling.</em></p>
+<p><em>Thanks,</em><br />
+<em>David Brewer</em> <br> <br></p>
+<p><strong>Data Science Academic Experience</strong><br />
+I studied data science at the <a href="https://www.umt.edu/study/data-science">University of Montana</a> and graduated with an MS in <a href="http://www.business.umt.edu/programs/graduate/msba-program/">Business Analytics</a> as part of the inagural cohort in 2017.</p>
+<p><img src="https://davidalbertbrewer.s3-us-west-2.amazonaws.com/biz_card_idea_1.jpg" style="width:50%; margin-right: 20px;" align="right"></p>
+<p><strong>Early Career</strong><br />
+I began my career working with a innovative startup focused on real<br />
+estate technology. I made significant contributions in sales and<br />
+marketing as well as technical project management. This company<br />
+successfully went through an acquisition event and is now known as<br />
+<a href="https://www.realestatepipeline.com/">Real Estate Pipeline</a>.</p>
+<strong>Graduate Assistant</strong><br />
+During graduate school I worked as an assistant to professors:<br />
+
+<ul>
+<li>
+Dr. Shawn Clouse, MIS
+</li>
+<li>
+Dr. Jason Triche, Data Analytics
+</li>
+<li>
+Dr. Justin Angle, Marketing
+</li>
+</ul>
+<strong>Internships</strong><br />
+I completed internships with several local Montana companies:<br />
+
+<ul>
+<li>
+BI developer at <a href="https://thinkdatasmart.com/">DataSmart Solutions</a>
+</li>
+<li>
+Junior data scientist at CTG, Inc now <a href="https://www.compunet.biz/">CompuNet</a>
+</li>
+<li>
+Data analyst at <a href="https://www.paynewest.com/">PayneWest Insurance</a>
+</li>
+</ul>
+<p><strong>More Information</strong><br />
+My full resume is available <a href="files/David_Brewer_Resume.pdf">here</a>.</p>
 
 
 
