--- a/projects.html
+++ b/projects.html
@@ -319,10 +319,26 @@ $(document).ready(function () {
 </div>
 
 
-<p><link rel="stylesheet" href="styles.css" type="text/css"></p>
-<p><img src="https://davidalbertbrewer.s3-us-west-2.amazonaws.com/davidalbertbrewer_headshot_1.jpg" style="width:25%; border:10px solid; margin-right: 20px" align="left"></p>
-<p>This page is under construction….more projects coming soon</p>
-<p><a href="https://public.tableau.com/profile/david.brewer#!/">Tableau Dashboards</a></p>
+<p><img src="https://davidalbertbrewer.s3-us-west-2.amazonaws.com/davidalbertbrewer_logo_20191110.png"></p>
+<div id="this-page-is-under-construction.more-projects-coming-soon" class="section level2">
+<h2>This page is under construction….more projects coming soon!</h2>
+<p><br> <br></p>
+<div id="data-visualization-using-tableau" class="section level4">
+<h4>Data Visualization using Tableau</h4>
+<p><strong>I use Tableau for data analysis and business intelligence.</strong></p>
+<p>Here are some various Tableau projects from graduate school and internships:<br />
+<a href="https://public.tableau.com/profile/david.brewer#!/">Tableau Dashboards</a></p>
+<p>I have also participated in the implementation of Tableau Server. <br> <br></p>
+</div>
+<div id="r-shiny-applications" class="section level4">
+<h4>R Shiny Applications</h4>
+<p><strong>I use R Shiny to productionalize statistical data analysis written in R.</strong></p>
+<p>Here is an example of an R shiny app I built for an internship and deployed on shinyapps.io:<br />
+<a href="https://davidalbertbrewer.shinyapps.io/Lead_Production_Dashboard/">Online Lead Generation</a></p>
+<p>This app is built on top of a data warehouse created from several disparate databases as well as marketing data feeds from various PPC ad partners like Google Adwords, Bing Ads, and Facebook. The app provided a high level overview of lead production across all advertisers for ~15 real estate lead generation websites. The dashboard provided enough information to make weelky decisions optimizing diversification of ad spend for ~$30K per month.</p>
+<p>Based on this work I was able to help by rigorously segmenting the advertising and feeding the results into a revenue optimization model. This allowed prices to be dynamically changed based on factors like cost per lead, propensity score, expected value, supply/demand, and other factors.</p>
+</div>
+</div>
 
 
 
