--- a/software.html
+++ b/software.html
@@ -319,10 +319,92 @@ $(document).ready(function () {
 </div>
 
 
-<p><link rel="stylesheet" href="styles.css" type="text/css"></p>
-<p><img src="https://davidalbertbrewer.s3-us-west-2.amazonaws.com/davidalbertbrewer_headshot_1.jpg" style="width:25%; border:10px solid; margin-right: 20px" align="left"></p>
-<p>This page is under construction….more software projects coming soon</p>
-<p><a href="http://davidalbertbrewer.herokuapp.com/">Flask App</a></p>
+<p><img src="https://davidalbertbrewer.s3-us-west-2.amazonaws.com/davidalbertbrewer_logo_20191110.png"></p>
+<div id="this-page-is-under-construction." class="section level2">
+<h2>This page is under construction….</h2>
+</div>
+<div id="more-software-projects-coming-soon" class="section level2">
+<h2>More software projects coming soon!</h2>
+<p><br> <br></p>
+<div id="web-applications-in-python" class="section level4">
+<h4>Web Applications in Python</h4>
+<p><strong>Flask is a great way for a data scientist like myself to share my work across an organization.</strong></p>
+<p>I have been using Flask to package analytics scripts and dashboards for my current role at <a href="https://www.edulog.com/">Education Logistics</a> working on telematics software.<br />
+Currently I don’t have anything which I <em>should</em> make publicly available.</p>
+<p>However here is the framework I deployed to the Heroku cloud and then I built on top of this for several web apps:<br />
+<a href="http://davidalbertbrewer.herokuapp.com/">Flask App</a><br />
+<br></p>
+</div>
+<div id="plotly-dash" class="section level4">
+<h4>Plotly Dash</h4>
+<p><strong>In 2018 I began using Dash by Plotly to productionalize my data analysis work.</strong></p>
+<p>I was introduced to this tool by a colleague and instantly realized how powerful Dash can be to implement my scripts into a resilient web-based dashboard. These interactive charts can handle robust analysis and user interaction.<br />
+I can make Dash apps available within a network or deployed to a web server like AWS.<br />
+<br></p>
+</div>
+<div id="web-scraping" class="section level4">
+<h4>Web Scraping</h4>
+<p><strong>I regularly use web scraping tools in various projects.</strong></p>
+<p>For real estate related work I have scraped listings of homes for sale, foreclosure lists, Zillow data, etc.<br />
+When API integration is not easily (or cheaply) available I will use web scraping to get data from online sources. Web scraping often requires using some basic methods to limit the frequency of hits to a given website or even some basic algorithms to simulate human online interaction with the website.<br />
+<br></p>
+</div>
+<div id="elasticsearch" class="section level4">
+<h4>Elasticsearch</h4>
+<p><strong>I use Elasticsearch to index large data sets with millions of records.</strong></p>
+Then I will use Python scripting to build complex analysis on top of these data. There are several packages which allow for relatively simple integration of Python analysis and Elasticsearch backends.<br />
+
+<ul>
+<li>
+For prototyping, I can setup my own local instance in either a Windows or Linux environment.
+</li>
+<li>
+For production, I typically hand off my work to a core engineering team to implement in a cloud environment like AWS or Google Cloud.
+</li>
+</ul>
+Some examples of my models put into production using Elasticsearch backend:<br />
+
+<ul>
+<li>
+Propensity score for online lead generation
+</li>
+<li>
+Vehicle diagnostics (J1939/OBD) for school district transportation departments with over 15K vehicles
+</li>
+</ul>
+<p><br></p>
+</div>
+<div id="reporting-database" class="section level4">
+<h4>Reporting Database</h4>
+<p><strong>I take large structured or unstructured datasets and build reporting database systems.</strong></p>
+To do this I create a Python application which interacts with a database backend usually in some flavor of SQL:
+<ul>
+<li>
+SQLite
+</li>
+<li>
+Postgres
+</li>
+<li>
+MySQL
+</li>
+</ul>
+<p><br></p>
+</div>
+<div id="gui-in-python" class="section level4">
+<h4>GUI in Python</h4>
+<p><strong>I use Tkinter and Kivy to build GUI applications in Python.</strong></p>
+<p>Typically these are lightweight programs which can be compiled into a standalone executable for deploying analysis scripts on a server.<br />
+I have also used these packages to build utilities for automating tasks.<br />
+<br></p>
+</div>
+<div id="web-servicesapi" class="section level4">
+<h4>Web Services/API</h4>
+<p><strong>I build simple RESTful web services using Python.</strong></p>
+<p>I have also learned to use Postman to integrate and document microservice or service oriented architecture in my applications.<br />
+I can access available applications via API’s to make use of external data in my own analysis.</p>
+</div>
+</div>
 
 
 
